--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
     // 🧠 There are many ways to solve this, but practice using a for loop to iterate over the array.
     // 🧠 As you have done in the past, declare a variable before you start looping, to accumulate the result.
     function sumNumsFor(nums) {
+      let result = 0
+
+      for (let idx = 0; idx < nums.length; idx++) {
+        let element = nums[idx]
+        if (typeof element === 'number') {
+          if (element ===13) {
+            return "I'm too superstitious!"
+          }
+          result += element
+        }
+        console.log (element)
+      }
+      return result
 
     }
 
@@ -41,7 +54,16 @@
     // ❗ Notes:
     // 🧠 There are many ways to solve this, but practice using a for loop to iterate over the characters of the string.
     function stripVowels(str) {
-
+      const split = str.split ('')
+      const result = []
+      for (let i = 0; i < str.length ; i++) {
+        const char = split [i]
+        console.log (char)
+        if (char !== 'a' && char !== 'e' && char !== 'i' && char !== 'o' && char !== 'u') {
+          result.push (char)
+        }
+      }
+      return result.join('')
     }
 
     // 👉 CHALLENGE 3
@@ -49,8 +71,20 @@
     // 🧠 Examples of usage:
     // sumNumsWhile([1, 2, 3]) // should return 6
     // sumNumsWhile([1, 2, 13]) // should return "I'm too superstitious!"
-    function sumNumsWhile() {
-
+    function sumNumsWhile(nums) {
+      let result = 0 
+      let i = 0
+      while (i <nums.length) {
+        let elem = nums [i]
+        if (typeof elem === 'number') {
+          if (elem ===13) {
+            return "I'm too superstitious!"
+          }
+          result += elem
+        }
+        i ++
+      }
+      return result
     }
 
     // 👉 CHALLENGE 4
@@ -70,8 +104,15 @@
     // 🧠 There are many ways to solve this, but practice using a while loop.
     // 🧠 Work out using pen and paper how the round number and the lifePoints change after each round.
     // 🧠 As long as there are lifePoints, decrease lifePoints by round number, and increase round number by one.
-    function fightMonsters() {
-
+    function fightMonsters(lifePoints) {
+        let round = 1 
+        while (lifePoints>0) {
+          lifePoints -= round
+          if (lifePoints <= 0) {
+            return `You died in round ${round}`
+          }
+          round ++
+        }
     }
 
     // 👉 CHALLENGE 5
@@ -81,7 +122,15 @@
     // findEvenNums([0, 1, 2, 3, 4]) // should return [0, 2, 4]
     // ❗ Notes:
     // 🧠 Use any kind of loop you'd like and the push method to populate the array of even numbers.
-    function findEvenNums() {
+    function findEvenNums(ints) {
+      let evens = []
+      for (let idx in ints) {
+        let num = ints [idx]
+        if (num % 2 ===0) {
+          evens.push (num)
+        }
+      }
+      return evens
 
     }
 
@@ -92,8 +141,20 @@
     // 🧠 Ages in the subarrays should appear in the same order they appeared in the original array.
     // 🧠 Examples of usage:
     // separateAges([31, 12, 25, 65, 84, 20]) // should return [[12, 20], [31, 25, 65, 84]]
-    function separateAges() {
+    function separateAges(ages) {
+      let under21 = []
+      let rest = []
+      for (let i in ages) {
+        let num = ages[i]
+        if (num <21) {
+          under21.push (num);
+        }
+        if (num >=21) {
+          rest.push (num);
+          }
+      }
 
+      return [under21, rest]
     }
 
     // 👉 CHALLENGE 7
@@ -103,9 +164,12 @@
     // 🧠 The "tail" prop contains an array holding the elements of the array after the first one.
     // 🧠 Examples of usage:
     // headAndTail([1, 2, 3]) // should return { head: 1, tail: [2, 3] }
-    function headAndTail() {
-
-    }
+    function headAndTail(arr) {
+      let head = arr [0]
+      let tail = arr.slice (1)
+    
+      return {head, tail}
+    } 
 
     // 👉 CHALLENGE 8
     // 🧠 The function nestedLoops takes an array of strings as its argument.
@@ -114,8 +178,25 @@
     // nestedLoops(['hello', 'goodbye']) // should return ['hEllO', 'gOOdbyE']
     // ❗ Notes:
     // 🧠 To capitalize a string you can use its toUpperCase method: "a".toUpperCase() returns "A"
-    function nestedLoops() {
+    function nestedLoops(strings) {
+      let result = []
 
+      for (let i in strings) {
+        let word = strings[i]
+        let modifiedWord = ''
+        for (let i in word) {
+          let char = word[i]
+
+          if (char === 'a' || char === 'e' || char === 'i' || char === 'o' || char === 'u') {
+            let upperCased = char.toUpperCase ()
+            modifiedWord += upperCased
+          } else {
+            modifiedWord += char
+          }
+        }
+        result.push(modifiedWord)
+      }
+      return result
     }
 
     // 👉 CHALLENGE 9
@@ -129,7 +210,12 @@
     // 🧠 Practice using pop and slice.
     // 🧠 Note that pop modifies the original array in place and returns the "popped" element, whereas slice gives us a brand new array.
     function crazyTrimmer(arr) {
-
+      if (arr.length % 2 ===0) {
+        arr.pop ()
+        return arr 
+      } else {
+        return arr.slice (1, arr.length - 1)
+      }
     }
 
     // 🧪 TESTS, do not work below this line
